[-] FO : Fix bug #PSCSX-826, bad z-index on labels

--- a/themes/default-bootstrap/sass/global.sass
+++ b/themes/default-bootstrap/sass/global.sass
@@ -612,7 +612,7 @@ table.table_block td
 	height: 85px
 	width: 85px
 	text-align: center
-	z-index: 0
+	z-index: 100
 
 .new-box
 	left: -4px
@@ -1324,8 +1324,6 @@ ul.step
 .cancel, .cancel a 
 	background: url(../../../modules/productcomments/img/delete.gif) no-repeat 0 -16px !important
 
-.star, .star a
-
 .cancel a, .star a
 	display: block
 	width: 100%
@@ -1371,8 +1369,6 @@ div.star a:hover
 	display: block
 	padding: 5px 0
 	color: $base-text-color
-
-.listcomment .authorcomment
 
 .header-container
 	background: $light-background
